# cocoa

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
components/: doc.txt
components/blocks/: CMakeLists.txt  blocks.c  doc.txt
components/blocks/include/: blocks.h
components/blocks/test/: CMakeLists.txt  test_blocks.c
components/cephes/: CMakeLists.txt  cephes.txt  log.c  mtherr.c
components/cephes/include/: mconf.h
components/cephes/test/: CMakeLists.txt  test_gamma.c
components/crypto/: CMakeLists.txt  doc.txt
components/crypto/bip32/: bip32.c
components/crypto/bip32/include/: bip32.h
components/crypto/check_mem/: check_mem.c
components/crypto/check_mem/include/: check_mem.h
components/crypto/include/: options.h
components/crypto/rand/: cephes.c  dft.c  matrix.c  rand.c  statistical.c
components/crypto/rand/include/: cephes.h  dft.h  matrix.h  rand.h  statistical.h
components/crypto/ripemd160/: ripemd160.c
components/crypto/ripemd160/include/: ripemd160.h
components/crypto/segwit_addr/: segwit_addr.c
components/crypto/segwit_addr/include/: segwit_addr.h
components/crypto/sha/include/: sha2.h
components/crypto/test/: CMakeLists.txt  doc.txt  test_base58.c  test_bignum.c  test_bip39.c  test_compare_bip32.c  test_crypto.c  test_optimized_bip32.c  test_segwit_addr.c  test_sha.c  test_statistical.c  test_v1_bip32.c  test_v1_rand.c  test_v2_bip32.c  test_v3_bip32.c  test_v4_bip32.c
components/crypto/test/assets/: dfft_2.csv
components/crypto/test/include/: test_base58_vectors.h  test_bignum.h  test_bip39.h  test_compare_bip32.h  test_optimized_bip32.h  test_segwit_addr.h  test_sha.h  test_sha2_v2.h  test_statistical.h  test_v1_bip32.h  test_v2_bip32 .h  test_v3_bip32.h  test_v4_bip32.h
components/gui/: CMakeLists.txt  gui.c  lv_theme_custom.c
components/gui/images/: bitcoin.c
components/gui/include/: gui.h  gui_events.h  lv_theme_custom.h
components/gui/test/: CMakeLists.txt
components/helpers/: CMakeLists.txt  doc.txt  helpers.c
components/helpers/include/: helpers.h
components/helpers/src/: helpers.c  helpers.h
components/helpers/test/: CMakeLists.txt  test_helpers.c  test_helpers.h  tests_helpers.c
components/helpers/tests/: tests_helpers.c
components/hmi/: CMakeLists.txt  doc.txt  hmi.c
components/hmi/include/: hmi.h
components/hmi/test/: CMakeLists.txt  test_hmi.c
components/libwally/: CMakeLists.txt  doc.txt
components/libwally/include/: config.h
components/logger/: CMakeLists.txt  doc.txt
components/logger/include/: logger.h
components/lv_examples/: CMakeLists.txt  Kconfig  component.mk  lv_ex_conf.h
components/mining/: CMakeLists.txt
components/mining/src/: mining.c  mining.h
components/power/: CMakeLists.txt  doc.txt  power.c
components/power/include/: power.h  qemu_power.h  sy6970_constants.h  tdisplays3_power.h  tdisplays3pro_power.h
components/power/src/: power.c
components/power/test/: CMakeLists.txt  test_power.c
components/screen/: CMakeLists.txt  backlight.c  component.mk  doc.txt  gui.c  gui.cfg  lcd.c  lvgl_demo_ui.c  screen.c
components/screen/images/: esp_logo.c  esp_text.c
components/screen/include/: backlight.h  display.h  gui.h  lcd.h  lv_conf.h  lvgl_demo_ui.h  qemu_display.h  screen.h  screen_config.h  tdisplays3_display.h  tdisplays3pro_display.h
components/screen/src/: qemu_display.c  tdisplays3_display.c
components/screen/test/: CMakeLists.txt  component.mk  test_screen.c
components/screen/test/include/: test_screen.h
components/screen/ttgo_tdisplays3/: lcd.c
components/screen/ttgo_tdisplays3/include/: lcd.h
components/screen/ttgo_tdisplays3_procamera/: lcd.c
components/storage/: CMakeLists.txt  doc.txt  storage.c
components/storage/include/: storage.h  storage_internals.h
components/storage/src/: storage.h
components/storage/test/: CMakeLists.txt  test_storage.c
components/storage/test/include/: test_storage.h
components/wallet/: CMakeLists.txt  doc.txt  wallet.c
components/wallet/include/: libsecp256k1-config.h  wallet.h
components/wallet/test/: CMakeLists.txt  test_wallet.c
components/wallet/tests/: CMakeLists.txt  test_wallet.c
configs/: sdkconfig.defaults copy.ttgo_tdisplays3  sdkconfig.defaults.esp32c3  sdkconfig.defaults.ttgo_tdisplays3_procamera  sdkconfig.esp32s3.defaults  sdkconfig.qemu.defaults  sdkconfig.tdisplays3.defaults  sdkconfig.tdisplays3pro.defaults
main/: CMakeLists.txt  component.mk  dashboard.c  doc.txt  idf_component.yml  lvgl_demo_ui.c  lvgl_demo_ui.h  main.c  main.cd  main.h  screen_config.h
main/images/: demo_cat.c  earth.c  esp_text.c  ue_logo.c  ue_text.c
main/include/: dashboard.h
partition_table/: partitionTable.csv  partitions.csv
test/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32c3_devkit  sdkconfig.defaults.esp32s3  sdkconfig.defaults.ttgo_tdisplays3_procamera
test/main/: CMakeLists.txt  idf_component.yml  main.c  main_test.c
tests/: CMakeLists.txt
unity-app/: CMakeLists.txt
